control form& edit

--- a/src/main/resources/templates/formPatient.html
+++ b/src/main/resources/templates/formPatient.html
@@ -1,39 +1,76 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="template1.html"
->
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="template1.html">
 <head>
 <meta charset="utf-8">
- <title>MyDoc</title>
+<title>MyDoc</title>
 </head>
 <body>
-<div layout:fragment="pageContent">
-<div class="contianer">
-<form th:action="@{savePatient}" method="post">
+	<div layout:fragment="pageContent"
+		class="d-flex justify-content-center">
 
-<div class="form-group">
-<label class="control-label">Name:</label>
-<input type="text" name="name" class="form-control" />
-<span></span>
-</div>
+		<div class="card col-md-9">
+			<div class="card-header" th:if="${mode=='new'}">Formulaire de saisie d'un nouveau
+				patient</div>
+				<div class="card-header" th:if="${patient.id!=null}">Formulaire de mise a jour patient</div>
+				
+				<!-- 
+				
+				<div class="card-header" th:if="${mode=='edit'}">Formulaire de mise a jour patient</div>
+				
+				 -->
+			<div class="card-body">
+				<div class="contianer">
+					<form th:action="@{savePatient}" method="post">
 
-<div class="form-group">
-<label class="control-label">Date Naissance:</label>
-<input type="date" name="dateNaissance" class="form-control" />
-<span></span>
-</div>
 
-<div class="form-group">
-<label class="control-label">Malade:</label>
-<input type="checkbox" name="malade"/>
-<span></span>
-</div>
+						<div class="form-group">
+							<label class="control-label">ID:</label> 
+							<label class="control-label" th:text="${patient.id}">ID:</label>
+							
+							<input type="hidden"
+								name="id" class="form-control" th:value="${patient.id}" />
 
-<button class="btn btn-success" type="submit">Save</button>
-</form>
+						</div>
 
- </div>
-</div>
+						<div class="form-group">
+							<label class="control-label">Name:</label> <input type="text"
+								name="name" class="form-control" th:value="${patient.name}" />
+							<div>
+								<span th:errors=${patient.name} class="text-danger"></span>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label">Score:</label> <input type="text"
+								name="score" class="form-control" th:value="${patient.score}" />
+							<div>
+								<span th:errors=${patient.score} class="text-danger"></span>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label">Date Naissance:</label> <input
+								type="date" name="dateNaissance" class="form-control"
+								th:value="${patient.dateNaissance}" /> <span
+								th:errors=${patient.dateNaissance} class="text-danger"></span>
+
+						</div>
+
+						<div class="form-group">
+							<label class="control-label">Malade:</label> <input
+								type="checkbox" name="malade" th:checked="${patient.malade}" />
+							<span th:errors=${patient.malade} class="text-danger"></span>
+						</div>
+
+						<button class="btn btn-success" type="submit">Save</button>
+					</form>
+
+				</div>
+			</div>
+		</div>
+
+	</div>
 </body>
 </html>
