--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -32,7 +32,10 @@ Mot clé
 <th>Name</th>
 <th>Date de naissance</th>
 <th>Malade</th>
+<th>Score</th>
 <th>Del</th>
+<th>Edit</th>
+
 </tr>
 
 
@@ -42,7 +45,10 @@ Mot clé
 <td th:text="${p.name}"></td>
 <td th:text="${p.dateNaissance}"></td>
 <td th:text="${p.malade}"></td>
+<td th:text="${p.score}"></td>
 <td> <a onClick="return confirm('Etes vous sur de vouloir supp.?')" class="btn btn-danger" th:href="@{deletePatient(id=${p.id},keyword=${keyword},page=${currentPage},size=${size})}">Delete</a></td>
+<td> <a  class="btn btn-secondary" th:href="@{editPatient(id=${p.id})}">Edite</a></td>
+
 
 </tr>
 
