--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -15,7 +15,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Patients</a>
+  <a class="navbar-brand" href="/">Patients</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
